--- a/docker/.env.beta
+++ b/docker/.env.beta
@@ -1,6 +1,6 @@
-NEXENT_IMAGE=ccr.ccs.tencentyun.com/nexent-hub/nexent:beta
-NEXENT_WEB_IMAGE=ccr.ccs.tencentyun.com/nexent-hub/nexent-web:beta
-NEXENT_DATA_PROCESS_IMAGE=ccr.ccs.tencentyun.com/nexent-hub/nexent-data-process:beta
+NEXENT_IMAGE=nexent/nexent:beta
+NEXENT_WEB_IMAGE=nexent/nexent-web:beta
+NEXENT_DATA_PROCESS_IMAGE=nexent/nexent-data-process:beta
 
 ELASTICSEARCH_IMAGE=elastic.m.daocloud.io/elasticsearch/elasticsearch:8.17.4
 POSTGRESQL_IMAGE=docker.m.daocloud.io/postgres:15-alpine
