🐛 Fix the circular tool call issue that occurs when inputting 'Python write a quicksort code' #165

--- a/backend/prompts/utils/prompt_generate.yaml
+++ b/backend/prompts/utils/prompt_generate.yaml
@@ -52,7 +52,7 @@ FEW_SHOTS_SYSTEM_PROMPT: |-
   在思考结束后，当你认为可以回答用户问题，那么可以不生成代码，直接生成最终回答给到用户并停止循环。
   
   ### python代码规范 ###
-  1. 代码内容必须以以'代码：\n```py\n'开头，并以'```<end_code>'标识符结尾，否则你将失败；
+  1. 如果认为是需要执行的代码，代码内容以'代码：\n```py\n'开头，并以'```<end_code>'标识符结尾。如果是不需要执行仅用于展示的代码，代码内容以'代码：\n```code\n'开头，并以'```<end_code>'标识符结尾；
   2. 只使用已定义的变量，变量将在多次调用之间持续保持。使用'print()'函数让下一次的模型调用看到对应变量信息；
   3. 正确使用工具的入参，使用关键字参数，不要用字典形式；
   4. 避免在一轮对话中进行过多的工具调用，这会导致输出格式难以预测；
@@ -108,6 +108,47 @@ FEW_SHOTS_SYSTEM_PROMPT: |-
     我已经获得了有关信息，现在我将生成最终回答。
     东方明珠广播电视塔位于中国上海市浦东新区陆家嘴... [已截断]
   
+    ---
+    任务："Python写一个快排序代码"
+  
+    快速排序是一种高效的排序算法，通过递归和分治策略对数据进行排序。以下是使用 Python 实现的快速排序代码：
+    ```code
+    def quicksort(arr):
+    if len(arr) <= 1:
+        return arr
+    pivot = arr[len(arr) // 2]  # 选择中间元素作为基准
+    left = [x for x in arr if x < pivot]   # 小于基准的元素
+    middle = [x for x in arr if x == pivot]  # 等于基准的元素
+    right = [x for x in arr if x > pivot]  # 大于基准的元素
+    return quicksort(left) + middle + quicksort(right)  # 递归排序并合并
+
+    example_array = [3,6,8,10,1,2,1]
+    result = quicksort(example_array)
+    print(result)
+    ```<end_code>
+    根据提供的Python代码执行结果，使用快速排序算法对示例数组 `[3,6,8,10,1,2,1]` 进行排序后得到的结果是 `[1, 1, 2, 3, 6, 8, 10]`。
+    这段代码定义了一个名为 `quicksort` 的函数，该函数接收一个列表作为输入参数，并返回一个新的已排序列表。
+
+    [快排序代码相关信息]
+  
+    我已经获得了有关信息，现在我将生成最终回答。
+    以下是使用 Python 实现的快速排序代码：
+    ```code
+    def quicksort(arr):
+    if len(arr) <= 1:
+        return arr
+    pivot = arr[len(arr) // 2]  # 选择中间元素作为基准
+    left = [x for x in arr if x < pivot]   # 小于基准的元素
+    middle = [x for x in arr if x == pivot]  # 等于基准的元素
+    right = [x for x in arr if x > pivot]  # 大于基准的元素
+    return quicksort(left) + middle + quicksort(right)  # 递归排序并合并
+
+    example_array = [3,6,8,10,1,2,1]
+    result = quicksort(example_array)
+    print(result)
+    ```<end_code>
+    根据提供的Python代码执行结果，使用快速排序算法对示例数组 `[3,6,8,10,1,2,1]` 进行排序后得到的结果是 `[1, 1, 2, 3, 6, 8, 10]`。
+    这段代码定义了一个名为 `quicksort` 的函数，该函数接收一个列表作为输入参数，并返回一个新的已排序列表。
     ---
     任务: "Generate an image of the oldest person in this document."
 
