--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "redis>=5.0.0",
     "fastmcp==2.6.0",
-    "langchain"
+    "langchain>=0.3.26"
 ]
 
 [project.optional-dependencies]
