✨ Add Terminal tool and it's infra

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -55,3 +55,6 @@ REDIS_BACKEND_URL=redis://redis:6379/1
 # Model Engine Config
 MODEL_ENGINE_HOST=https://localhost:30555
 MODEL_ENGINE_APIKEY=model_engine_api_key
+
+# Terminal Tool SSH Key Path
+SSH_PRIVATE_KEY_PATH=/path/to/openssh-server/ssh-keys/openssh_server_key
