--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -79,6 +79,7 @@ services:
     restart: always
     volumes:
       - ${NEXENT_USER_DIR:-$HOME/nexent}:/mnt/nexent
+      - ${ROOT_DIR}/openssh-server/ssh-keys:/opt/ssh-keys:ro
     environment:
       <<: [*minio-vars, *es-vars]
       skip_proxy: "true"
@@ -196,6 +197,32 @@ services:
         mc anonymous set download myadmin/$MINIO_DEFAULT_BUCKET
         wait $$MINIO_PID
       "
+
+  nexent-openssh-server:
+    image: ${OPENSSH_SERVER_IMAGE}
+    container_name: nexent-openssh-server
+    hostname: nexent-openssh-server
+    environment:
+      PUID: 1000
+      PGID: 1000
+      TZ: "Asia/Shanghai"
+      PUBLIC_KEY_FILE: /config/authorized_keys
+      SUDO_ACCESS: "true"
+      PASSWORD_ACCESS: "false"
+      LOG_STDOUT: "true"
+    volumes:
+      - ${ROOT_DIR}/openssh-server/config:/config
+      - ${ROOT_DIR}/openssh-server/config/custom-cont-init.d:/custom-cont-init.d:ro
+    networks:
+      - nexent
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"  # Maximum size of a single log file
+        max-file: "3"    # Maximum number of log files to keep
+    profiles:
+      - terminal
 
 networks:
   nexent:
