--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -86,6 +86,7 @@ services:
       - "5010:5010"  # Backend service port
     volumes:
       - ${NEXENT_USER_DIR:-$HOME/nexent}:/mnt/nexent
+      - ${ROOT_DIR}/openssh-server/ssh-keys:/opt/ssh-keys:ro
     environment:
       <<: [*minio-vars, *es-vars]
       skip_proxy: "true"
@@ -211,6 +212,34 @@ services:
         mc anonymous set download myadmin/$MINIO_DEFAULT_BUCKET
         wait $$MINIO_PID
       "
+
+  nexent-openssh-server:
+    image: ${OPENSSH_SERVER_IMAGE}
+    container_name: nexent-openssh-server
+    hostname: nexent-openssh-server
+    environment:
+      PUID: 1000
+      PGID: 1000
+      TZ: "Asia/Shanghai"
+      PUBLIC_KEY_FILE: /config/authorized_keys
+      SUDO_ACCESS: "true"
+      PASSWORD_ACCESS: "false"
+      LOG_STDOUT: "true"
+    ports:
+      - "2222:2222"  # SSH port
+    volumes:
+      - ${ROOT_DIR}/openssh-server/config:/config
+      - ${ROOT_DIR}/openssh-server/config/custom-cont-init.d:/custom-cont-init.d:ro
+    networks:
+      - nexent
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"  # Maximum size of a single log file
+        max-file: "3"    # Maximum number of log files to keep
+    profiles:
+      - terminal
 
 networks:
   nexent:
