--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -51,7 +51,8 @@ dependencies = [
     "mcp==1.10.1",
     "tiktoken>=0.5.0",
     "tavily-python",
-    "linkup-sdk"
+    "linkup-sdk",
+    "paramiko>=3.4.0"
 ]
 
 [project.optional-dependencies]
