--- a/docker/.env.beta
+++ b/docker/.env.beta
@@ -2,7 +2,8 @@ NEXENT_IMAGE=nexent/nexent:beta
 NEXENT_WEB_IMAGE=nexent/nexent-web:beta
 NEXENT_DATA_PROCESS_IMAGE=nexent/nexent-data-process:beta
 
-ELASTICSEARCH_IMAGE=elastic.m.daocloud.io/elasticsearch/elasticsearch:8.17.4
-POSTGRESQL_IMAGE=docker.m.daocloud.io/postgres:15-alpine
-REDIS_IMAGE=docker.m.daocloud.io/redis:alpine
-MINIO_IMAGE=quay.m.daocloud.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
+ELASTICSEARCH_IMAGE=docker.elastic.co/elasticsearch/elasticsearch:8.17.4
+POSTGRESQL_IMAGE=postgres:15-alpine
+REDIS_IMAGE=redis:alpine
+MINIO_IMAGE=quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
+OPENSSH_SERVER_IMAGE=lscr.io/linuxserver/openssh-server:latest
