--- a/docker/.env.general
+++ b/docker/.env.general
@@ -6,3 +6,4 @@ ELASTICSEARCH_IMAGE=docker.elastic.co/elasticsearch/elasticsearch:8.17.4
 POSTGRESQL_IMAGE=postgres:15-alpine
 REDIS_IMAGE=redis:alpine
 MINIO_IMAGE=quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
+OPENSSH_SERVER_IMAGE=lscr.io/linuxserver/openssh-server:latest
