--- a/docker/.env.mainland
+++ b/docker/.env.mainland
@@ -6,3 +6,4 @@ ELASTICSEARCH_IMAGE=elastic.m.daocloud.io/elasticsearch/elasticsearch:8.17.4
 POSTGRESQL_IMAGE=docker.m.daocloud.io/postgres:15-alpine
 REDIS_IMAGE=docker.m.daocloud.io/redis:alpine
 MINIO_IMAGE=quay.m.daocloud.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
+OPENSSH_SERVER_IMAGE=docker.m.daocloud.io/linuxserver/openssh-server:latest
