--- a/.github/workflows/docker-build-push-overseas.yml
+++ b/.github/workflows/docker-build-push-overseas.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Push All Images
+name: Docker Build and Push All Images to DockerHub
 
 on:
   workflow_dispatch:
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build main image (amd64) and load locally
         run: |
-          docker buildx build --platform linux/amd64 -t nexent/nexent:amd64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent:amd64 -f make/main/Dockerfile .
+          docker buildx build --platform linux/amd64 -t nexent/nexent:amd64 --load -f make/main/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push main image (amd64) to DockerHub
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build main image (arm64) and load locally
         run: |
-          docker buildx build --platform linux/arm64 -t nexent/nexent:arm64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent:arm64 -f make/main/Dockerfile .
+          docker buildx build --platform linux/arm64 -t nexent/nexent:arm64 --load -f make/main/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push main image (arm64) to DockerHub
@@ -72,7 +72,7 @@ jobs:
           rm -rf .git .gitattributes
       - name: Build data process image (amd64) and load locally
         run: |
-          docker buildx build --platform linux/amd64 -t nexent/nexent-data-process:amd64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent-data-process:amd64 -f make/data_process/Dockerfile .
+          docker buildx build --platform linux/amd64 -t nexent/nexent-data-process:amd64 --load -f make/data_process/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push data process image (amd64) to DockerHub
@@ -101,7 +101,7 @@ jobs:
           rm -rf .git .gitattributes
       - name: Build data process image (arm64) and load locally
         run: |
-          docker buildx build --platform linux/arm64 -t nexent/nexent-data-process:arm64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent-data-process:arm64 -f make/data_process/Dockerfile .
+          docker buildx build --platform linux/arm64 -t nexent/nexent-data-process:arm64 --load -f make/data_process/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push data process image (arm64) to DockerHub
@@ -121,7 +121,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build web image (amd64) and load locally
         run: |
-          docker buildx build --platform linux/amd64 -t nexent/nexent-web:amd64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent-web:amd64 -f make/web/Dockerfile .
+          docker buildx build --platform linux/amd64 -t nexent/nexent-web:amd64 --load -f make/web/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push web image (amd64) to DockerHub
@@ -141,7 +141,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build web image (arm64) and load locally
         run: |
-          docker buildx build --platform linux/arm64 -t nexent/nexent-web:arm64 --load -t ccr.ccs.tencentyun.com/nexent-hub/nexent-web:arm64 -f make/web/Dockerfile .
+          docker buildx build --platform linux/arm64 -t nexent/nexent-web:arm64 --load -f make/web/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push web image (arm64) to DockerHub
