--- a/.github/workflows/docker-build-push-beta.yml
+++ b/.github/workflows/docker-build-push-beta.yml
@@ -26,11 +26,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Build main image (amd64) and load locally
         run: |
-          docker buildx build --platform linux/amd64 -t nexent/nexent:beta-amd64 --load -f make/main/Dockerfile .
+          docker buildx build --platform linux/amd64 -t nexent/nexent-commercial:beta-amd64 --load -f make/main/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push main image (amd64) to DockerHub
-        run: docker push nexent/nexent:beta-amd64
+        run: docker push nexent/nexent-commercial:beta-amd64
 
   build-and-push-main-arm64:
     runs-on: ubuntu-latest
@@ -46,11 +46,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Build main image (arm64) and load locally
         run: |
-          docker buildx build --platform linux/arm64 -t nexent/nexent:beta-arm64 --load -f make/main/Dockerfile .
+          docker buildx build --platform linux/arm64 -t nexent/nexent-commercial:beta-arm64 --load -f make/main/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push main image (arm64) to DockerHub
-        run: docker push nexent/nexent:beta-arm64
+        run: docker push nexent/nexent-commercial:beta-arm64
 
   build-and-push-data-process-amd64:
     runs-on: ubuntu-latest
@@ -75,11 +75,11 @@ jobs:
           rm -rf .git .gitattributes
       - name: Build data process image (amd64) and load locally
         run: |
-          docker buildx build --platform linux/amd64 -t nexent/nexent-data-process:beta-amd64 --load -f make/data_process/Dockerfile .
+          docker buildx build --platform linux/amd64 -t nexent/nexent-data-process-commercial:beta-amd64 --load -f make/data_process/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push data process image (amd64) to DockerHub
-        run: docker push nexent/nexent-data-process:beta-amd64
+        run: docker push nexent/nexent-data-process-commercial:beta-amd64
 
   build-and-push-data-process-arm64:
     runs-on: ubuntu-latest
@@ -104,11 +104,11 @@ jobs:
           rm -rf .git .gitattributes
       - name: Build data process image (arm64) and load locally
         run: |
-          docker buildx build --platform linux/arm64 -t nexent/nexent-data-process:beta-arm64 --load -f make/data_process/Dockerfile .
+          docker buildx build --platform linux/arm64 -t nexent/nexent-data-process-commercial:beta-arm64 --load -f make/data_process/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push data process image (arm64) to DockerHub
-        run: docker push nexent/nexent-data-process:beta-arm64
+        run: docker push nexent/nexent-data-process-commercial:beta-arm64
 
   build-and-push-web-amd64:
     runs-on: ubuntu-latest
@@ -124,11 +124,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Build web image (amd64) and load locally
         run: |
-          docker buildx build --platform linux/amd64 -t nexent/nexent-web:beta-amd64 --load -f make/web/Dockerfile .
+          docker buildx build --platform linux/amd64 -t nexent/nexent-web-commercial:beta-amd64 --load -f make/web/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push web image (amd64) to DockerHub
-        run: docker push nexent/nexent-web:beta-amd64
+        run: docker push nexent/nexent-web-commercial:beta-amd64
 
   build-and-push-web-arm64:
     runs-on: ubuntu-latest
@@ -144,11 +144,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Build web image (arm64) and load locally
         run: |
-          docker buildx build --platform linux/arm64 -t nexent/nexent-web:beta-arm64 --load -f make/web/Dockerfile .
+          docker buildx build --platform linux/arm64 -t nexent/nexent-web-commercial:beta-arm64 --load -f make/web/Dockerfile .
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Push web image (arm64) to DockerHub
-        run: docker push nexent/nexent-web:beta-arm64
+        run: docker push nexent/nexent-web-commercial:beta-arm64
 
   manifest-push-main:
     runs-on: ubuntu-latest
@@ -160,10 +160,10 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Create and push manifest for main (DockerHub)
         run: |
-          docker manifest create nexent/nexent:beta \
-            nexent/nexent:beta-amd64 \
-            nexent/nexent:beta-arm64
-          docker manifest push nexent/nexent:beta
+          docker manifest create nexent/nexent-commercial:beta \
+            nexent/nexent-commercial:beta-amd64 \
+            nexent/nexent-commercial:beta-arm64
+          docker manifest push nexent/nexent-commercial:beta
 
   manifest-push-data-process:
     runs-on: ubuntu-latest
@@ -175,10 +175,10 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Create and push manifest for data-process (DockerHub)
         run: |
-          docker manifest create nexent/nexent-data-process:beta \
-            nexent/nexent-data-process:beta-amd64 \
-            nexent/nexent-data-process:beta-arm64
-          docker manifest push nexent/nexent-data-process:beta
+          docker manifest create nexent/nexent-data-process-commercial:beta \
+            nexent/nexent-data-process-commercial:beta-amd64 \
+            nexent/nexent-data-process-commercial:beta-arm64
+          docker manifest push nexent/nexent-data-process-commercial:beta
 
   manifest-push-web:
     runs-on: ubuntu-latest
@@ -190,7 +190,7 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u nexent --password-stdin
       - name: Create and push manifest for web (DockerHub)
         run: |
-          docker manifest create nexent/nexent-web:beta \
-            nexent/nexent-web:beta-amd64 \
-            nexent/nexent-web:beta-arm64
-          docker manifest push nexent/nexent-web:beta
+          docker manifest create nexent/nexent-web-commercial:beta \
+            nexent/nexent-web-commercial:beta-amd64 \
+            nexent/nexent-web-commercial:beta-arm64
+          docker manifest push nexent/nexent-web-commercial:beta
