♻️  Unify all env variable to consts.py

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -58,3 +58,37 @@ MODEL_ENGINE_APIKEY=model_engine_api_key
 
 # Terminal Tool SSH Key Path
 SSH_PRIVATE_KEY_PATH=/path/to/openssh-server/ssh-keys/openssh_server_key
+
+# ===== Data Processing Service Configuration =====
+
+# Redis Port
+REDIS_PORT=6379
+
+# Flower Monitoring
+FLOWER_PORT=5555
+
+# Ray Configuration
+RAY_ACTOR_NUM_CPUS=2
+RAY_DASHBOARD_PORT=8265
+RAY_DASHBOARD_HOST=0.0.0.0
+RAY_NUM_CPUS=
+RAY_PLASMA_DIRECTORY=/tmp
+RAY_OBJECT_STORE_MEMORY_GB=2.0
+RAY_TEMP_DIR=/tmp/ray
+RAY_LOG_LEVEL=INFO
+
+# Service Control Flags
+DISABLE_RAY_DASHBOARD=false
+DISABLE_CELERY_FLOWER=false
+DOCKER_ENVIRONMENT=false
+
+# Celery Configuration
+CELERY_WORKER_PREFETCH_MULTIPLIER=1
+CELERY_TASK_TIME_LIMIT=3600
+ELASTICSEARCH_REQUEST_TIMEOUT=30
+
+# Worker Configuration
+RAY_ADDRESS=auto
+QUEUES=process_q,forward_q
+WORKER_NAME=
+WORKER_CONCURRENCY=4
