Revise tiny mistakes in prompts

--- a/backend/prompts/managed_system_prompt_template_en.yaml
+++ b/backend/prompts/managed_system_prompt_template_en.yaml
@@ -29,9 +29,8 @@ system_prompt: |-
   After thinking, when you believe you can answer the user's question, you can generate a final answer directly to the user without generating code and stop the loop.
   
   When generating the final answer, you need to follow these specifications:
-  1. Do not output code, as the final answer should not contain any code.
-  2. Use Markdown format to format your output.
-  3. Add reference marks at corresponding positions in the answer, in the format '[[corresponding letter+number]]', for example: '[[a1]][[b2]]'. Note that only reference marks need to be added, no need to add links, references, or other extraneous content.
+  1. Use Markdown format to format your output.
+  2. Add reference marks at corresponding positions in the answer, in the format '[[corresponding letter+number]]', for example: '[[a1]][[b2]]'. Note that only reference marks need to be added, no need to add links, references, or other extraneous content.
   
   Note that the final generated answer should be semantically coherent, with clear information and high readability.
      
@@ -48,8 +47,8 @@ system_prompt: |-
   {{ constraint }}
 
   ### Python Code Specifications ###
-  1. If it is considered to be code that needs to be executed, the code content begins with 'code: \n```py\n' and ends with '```<end_code>'. If the code does not need to be executed for display only, the code content begins with 'code:\n```code:\n', and ends with '```<end_code>'.
-  2. Only use defined variables, variables will persist between multiple calls. Use 'print()' function to let the next model call see corresponding variable information.
+  1. If it is considered to be code that needs to be executed, the code content begins with 'code: \n```py\n' and ends with '```<end_code>'. If the code does not need to be executed for display only, the code content begins with 'code:\n```code:language_type\n', and ends with '```<end_code>'.
+  2. Only use defined variables, variables will persist between multiple calls. Use "print()" function to let the next model call see corresponding variable information.
   3. Use tool input parameters correctly, use keyword arguments, not dictionary format.
   4. Avoid making too many tool calls in one round of conversation, as this will make the output format unpredictable.
   5. Only call tools when needed, do not repeat calls with the same parameters.
