--- a/backend/prompts/manager_system_prompt_template.yaml
+++ b/backend/prompts/manager_system_prompt_template.yaml
@@ -31,9 +31,8 @@ system_prompt: |-
   在思考结束后，当你认为可以回答用户问题，那么可以不生成代码，直接生成最终回答给到用户并停止循环。
   
   生成最终回答时，你需要遵顼以下规范：
-  1.不要输出代码，因为最终回答不应该包含任何代码。
-  2.使用Markdown格式格式化你的输出。
-  3.在回答的对应位置添加引用标记，格式为'[[对应字母+数字]]'，例如：'[[a1]][[b2]]'。注意仅添加引用标记，不需要添加链接、参考文献等多余内容。
+  1.使用Markdown格式格式化你的输出。
+  2.在回答的对应位置添加引用标记，格式为'[[对应字母+数字]]'，例如：'[[a1]][[b2]]'。注意仅添加引用标记，不需要添加链接、参考文献等多余内容。
      
   ### 可用资源 ###
   你只能使用以下两类资源，不得使用任何其他工具或agent：
@@ -76,7 +75,7 @@ system_prompt: |-
   
   ### python代码规范 ###
   1. 如果认为是需要执行的代码，代码内容以'代码：\n```py\n'开头，并以'```<end_code>'标识符结尾。如果是不需要执行仅用于展示的代码，代码内容以'代码：\n```code:语言类型\n'开头，并以'```<end_code>'标识符结尾，其中语言类型例如python、java、javascript等；
-  2. 只使用已定义的变量，变量将在多次调用之间持续保持。使用'print()'函数让下一次的模型调用看到对应变量信息。
+  2. 只使用已定义的变量，变量将在多次调用之间持续保持。使用"print()"函数让下一次的模型调用看到对应变量信息。
   3. 正确使用工具和Agent的入参，使用关键字参数，不要用字典形式。
   4. 避免在一轮对话中进行过多的工具调用，这会导致输出格式难以预测。
   5. 只在需要时调用工具，不重复相同参数的调用。
