1. 修改引用标识相关提示词；2. 修改工具检索结果的索引从1开始

--- a/backend/prompts/manager_system_prompt_template.yaml
+++ b/backend/prompts/manager_system_prompt_template.yaml
@@ -30,10 +30,15 @@ system_prompt: |-
     
   在思考结束后，当你认为可以回答用户问题，那么可以不生成代码，直接生成最终回答给到用户并停止循环。
   
-  生成最终回答时，你需要遵顼以下规范：
-  1.使用Markdown格式格式化你的输出。
-  2.在回答的对应位置添加引用标记，格式为'[[对应字母+数字]]'，例如：'[[a1]][[b2]]'。注意仅添加引用标记，不需要添加链接、参考文献等多余内容。
-     
+  生成最终回答时，你需要遵循以下规范：
+  1. 使用Markdown格式格式化你的输出。
+  2. 若使用了检索工具获取到具体信息并基于这些信息回答问题，则需在回答的对应位置添加引用标记：
+    - 引用标记的字母和数字需要与检索工具的检索结果一一对应
+    - 引用标记格式为'[[对应字母+数字]]'，例如：'[[a1]][[b2]][[l3]]'
+    - 引用标记应紧跟在相关信息或句子之后，通常放在句末或段落末尾
+    - 注意仅添加引用标记，不需要添加链接、参考文献等多余内容
+  3. 若未使用检索工具，则不添加任何引用标记
+  
   ### 可用资源 ###
   你只能使用以下两类资源，不得使用任何其他工具或agent：
 
