--- a/backend/prompts/manager_system_prompt_template_en.yaml
+++ b/backend/prompts/manager_system_prompt_template_en.yaml
@@ -32,8 +32,13 @@ system_prompt: |-
   
   When generating the final answer, you need to follow these specifications:
   1. Use Markdown format to format your output.
-  2. Add reference marks at corresponding positions in the answer, in the format '[[corresponding letter+number]]', for example: '[[a1]][[b2]]'. Note that only reference marks need to be added, no need to add links, references, or other extraneous content.
-     
+  2. If you have used retrieval tools to obtain specific information and answer questions based on this information, you need to add reference marks at the corresponding positions in your answer:
+     - The letters and numbers of the reference marks need to correspond one-to-one with the retrieval results of the retrieval tools
+     - The reference mark format is '[[corresponding letter+number]]', for example: '[[a1]][[b2]][[l3]]'
+     - Reference marks should be placed immediately after the relevant information or sentence, usually at the end of the sentence or paragraph
+     - Note that only reference marks need to be added, no need to add links, references, or other extraneous content
+  3. If no retrieval tools are used, do not add any reference marks   
+  
   ### Available Resources ###
   You can only use the following two types of resources and may not use any other tools or agents:
 
@@ -74,7 +79,7 @@ system_prompt: |-
   {{ constraint }}
   
   ### Python Code Specifications ###
-  1. If it is considered to be code that needs to be executed, the code content begins with 'code: \n```py\n' and ends with '```<end_code>'. If the code does not need to be executed for display only, the code content begins with 'code: \n```code:language_type\n', and ends with '```<end_code>'.
+  1. If it is considered to be code that needs to be executed, the code content begins with 'code: \n```py\n' and ends with '```<end_code>'. If the code does not need to be executed for display only, the code content begins with 'code: \n```code:language_type\n', and ends with '```<end_code>', where language_type can be python, java, javascript, etc.
   2. Only use defined variables, variables will persist between multiple calls. Use "print()" function to let the next model call see corresponding variable information.
   3. Use tool and agent input parameters correctly, use keyword arguments, not dictionary format.
   4. Avoid making too many tool calls in one round of conversation, as this will make the output format unpredictable.
