--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -17,26 +17,21 @@ on:
         default: '[]'
 
 jobs:
-  build-main:
+  build-images:
     runs-on: ${{ fromJson(inputs.runner_label_json) }}
+    strategy:
+      matrix:
+        target: [main, data-process, web]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
           retries: 3
-      - name: Build main application image
-        run: docker build --build-arg MIRROR=https://pypi.tuna.tsinghua.edu.cn/simple -t nexent/nexent -f make/main/Dockerfile .
 
-  build-data-process:
-    runs-on: ${{ fromJson(inputs.runner_label_json) }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-          retries: 3
+      # Data process specific cache handling
       - name: Check if model is cached locally
+        if: matrix.target == 'data-process'
         id: check-model
         run: |
           if [ -f ~/model-assets/clip-vit-base-patch32/config.json ] && [ -d ~/model-assets/nltk_data ]; then
@@ -45,30 +40,28 @@ jobs:
           else
             echo "cache-hit=false" >> "$GITHUB_OUTPUT"
           fi
+
       - name: Clone model if not cached
-        if: steps.check-model.outputs.cache-hit == 'false'
+        if: matrix.target == 'data-process' && steps.check-model.outputs.cache-hit == 'false'
         run: |
           GIT_LFS_SKIP_SMUDGE=1 git clone https://hf-mirror.com/Nexent-AI/model-assets
           cd ./model-assets
           GIT_TRACE=1 GIT_CURL_VERBOSE=1 GIT_LFS_LOG=debug git lfs pull
           rm -rf .git .gitattributes
-      - name: Build data process image
-        run: docker build --build-arg MIRROR=https://pypi.tuna.tsinghua.edu.cn/simple -t nexent/nexent-data-process -f make/data_process/Dockerfile .
 
-  build-web:
-    runs-on: ${{ fromJson(inputs.runner_label_json) }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-          retries: 3
-      - name: Build web frontend image
-        run: docker build --build-arg MIRROR=https://registry.npmmirror.com -t nexent/nexent-web -f make/web/Dockerfile .
+      - name: Build docker image
+        run: |
+          if [ "${{ matrix.target }}" = "main" ]; then
+            docker build --build-arg MIRROR=https://pypi.tuna.tsinghua.edu.cn/simple -t nexent/nexent -f make/main/Dockerfile .
+          elif [ "${{ matrix.target }}" = "data-process" ]; then
+            docker build --build-arg MIRROR=https://pypi.tuna.tsinghua.edu.cn/simple -t nexent/nexent-data-process -f make/data_process/Dockerfile .
+          else
+            docker build --build-arg MIRROR=https://registry.npmmirror.com -t nexent/nexent-web -f make/web/Dockerfile .
+          fi
 
   deploy:
     runs-on: ${{ fromJson(inputs.runner_label_json) }}
-    needs: [ build-main, build-data-process, build-web ]
+    needs: build-images
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
