--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -51,7 +51,19 @@ dependencies = [
     "mcp==1.10.1",
     "tiktoken>=0.5.0",
     "tavily-python",
-    "linkup-sdk"
+    "linkup-sdk",
+    "mem0ai==0.1.115"
+]
+
+[tool.uv]
+override-dependencies = [
+    "pymongo==999.0.0",
+    "psycopg2-binary==999.0.0",
+    "redis==999.0.0", 
+    "neo4j==999.0.0",
+    "chromadb==999.0.0",
+    "pinecone-client==999.0.0",
+    "weaviate-client==999.0.0",
 ]
 
 [project.optional-dependencies]
