--- a/backend/prompts/manager_system_prompt_template.yaml
+++ b/backend/prompts/manager_system_prompt_template.yaml
@@ -95,6 +95,14 @@ system_prompt: |-
 
 managed_agent:
   task: |-
+      你是一个名为'{{name}}'的助手。
+      你的管理者给你提交了这个任务。
+      ---
+      任务：
+      {{task}}
+      ---
+      你正在帮助你的管理者解决一个更大的任务：所以确保不要提供一行答案，而是提供尽可能多的信息，让他们清楚地理解答案。
+      即使你的任务解决不成功，也请返回尽可能多的上下文，这样你的管理者可以根据这个反馈采取行动。
 
   report: |-
       {{final_answer}}
