--- a/make/main/Dockerfile
+++ b/make/main/Dockerfile
@@ -18,10 +18,12 @@ WORKDIR /opt/backend
 
 # Layer 0: install base dependencies
 COPY backend/pyproject.toml /opt/backend/pyproject.toml
-RUN uv sync $(test -n "$MIRROR" && echo "-i $MIRROR")
+RUN uv sync --no-cache-dir $(test -n "$MIRROR" && echo "-i $MIRROR") && \
+    uv cache clean
 # Layer 1: install sdk in link mode
 COPY sdk /opt/sdk
-RUN uv pip install /opt/sdk $(test -n "$MIRROR" && echo "-i $MIRROR")
+RUN uv pip install --no-cache-dir /opt/sdk $(test -n "$MIRROR" && echo "-i $MIRROR") && \
+    uv cache clean
 # Layer 2: copy backend code
 COPY backend /opt/backend
 
