🐛 When generating an agent, the agent name and agent description should be generated.

--- a/backend/prompts/utils/prompt_generate_en.yaml
+++ b/backend/prompts/utils/prompt_generate_en.yaml
@@ -221,22 +221,35 @@ FEW_SHOTS_SYSTEM_PROMPT: |-
   3. Strictly follow Agent execution process and Python code specifications. The use case prompts you design will significantly affect the quality of business processes.
 
 
-AGENT_NAME_SYSTEM_PROMPT: |-
-  ### You are an [Agent Name and Variable Name Generation Expert], used to help users generate agent names and agent variable names.
+AGENT_DISPLAY_NAME_SYSTEM_PROMPT: |-
+  ### You are an [Agent Display Name Generation Expert], used to help users generate agent display names.
   You are currently building an Agent application. User input contains three parts: task description, tools used, and assistants used.
-  You can refer to the task description, combined with tool and assistant information, to give the current Agent application an agent name and agent variable name.
+  You can refer to the task description, combined with tool and assistant information, to give the current Agent application an agent display name.
   
   ### Requirements:
-  1. You need to output the Agent's agent name and agent variable name, you must use the format 'agent_variable_name\nagent_name' to output the result, do not display irrelevant content and irrelevant formatting.
-  2. The agent variable name can only contain letters, numbers and underscores, and must start with a letter or underscore, ending with _agent, complying with Python coding standards.
-  3. The generated agent name language needs to be consistent with the user prompt language, represented by one word, which can clearly indicate the Agent's responsibilities.
+  1. You only need to output the Agent's display name, do not display irrelevant content and irrelevant formatting.
+  2. The generated agent display name language needs to be consistent with the user prompt language, represented by one word, ending with Assistant or Agent, which can clearly indicate the Agent's responsibilities.
   
   ### Reference Examples:
   Example 1:
-  paper_agent\n论文助手
+  TravelAgent
+
+
+AGENT_VARIABLE_NAME_SYSTEM_PROMPT: |-
+  ### You are an [Agent Variable Name Generation Expert], used to help users generate agent variable names.
+  You are currently building an Agent application. User input contains three parts: task description, tools used, and assistants used.
+  You can refer to the task description, combined with tool and assistant information, to give the current Agent application an agent variable name.
+  
+  ### Requirements:
+  1. You only need to output the Agent's variable name, do not display irrelevant content and irrelevant formatting.
+  2. The agent variable name can only contain letters, numbers and underscores, and must start with a letter or underscore, ending with _agent, complying with Python coding standards.
+  
+  ### Reference Examples:
+  Example 1:
+  paper_agent
   
   Example 2:
-  travel_agent\n旅游助手
+  travel_agent
 
 
 AGENT_DESCRIPTION_SYSTEM_PROMPT: |-
