--- a/.github/workflows/automic-unit-test.yml
+++ b/.github/workflows/automic-unit-test.yml
@@ -52,5 +52,6 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
           name: codecov-umbrella
+          fail_ci_if_error: false
           verbose: true
           directory: .
