♻️ standardize prompt vars with Jinja2 templating
# Conflicts:
#	backend/services/elasticsearch_service.py
#	backend/utils/attachment_utils.py

--- a/backend/prompts/knowledge_summary_agent_en.yaml
+++ b/backend/prompts/knowledge_summary_agent_en.yaml
@@ -13,4 +13,4 @@ system_prompt: |-
   
 user_prompt: |
   Please generate a concise knowledge base summary based on the following keyword content, no more than 150 words:
-  Keyword content: {content} 
+  Keyword content: {{ content }} 
