--- a/backend/prompts/manager_system_prompt_template.yaml
+++ b/backend/prompts/manager_system_prompt_template.yaml
@@ -89,6 +89,11 @@ system_prompt: |-
          返回输出类型: {{tool.output_type}}
      {%- endfor %}
 
+     {%- if knowledge_base_summary %}
+     - knowledge_base_search工具只能使用以下知识库索引，请根据用户问题选择最相关的一个或多个知识库索引：
+     {{ knowledge_base_summary }}
+     {%- endif %}
+
   2. agent（专门的助手）
      {%- if managed_agents and managed_agents.values() | list %}
      - 你只能使用以下agent，不得使用任何其他agent：
